fix align & font

--- a/css/index.sass
+++ b/css/index.sass
@@ -17,11 +17,11 @@ html, body
 	src: url('./font/FuturaFont/FuturaStd-Bold.svg#bingo') format('svg')
 	src: url('./font/FuturaFont/FuturaStd-Bold.otf') format('opentype')
 @font-face
-	font-family: "FuturaStd MediumOblique"
-	src: url('./font/FuturaFont/FuturaStd-MediumOblique.eot')
+	font-family: "FuturaStd LightOblique"
+	src: url('./font/FuturaFont/FuturaStd-LightOblique.eot')
 	src: local('futurastd')
-	src: url('./font/FuturaFont/FuturaStd-MediumOblique.svg#bingo') format('svg')
-	src: url('./font/FuturaFont/FuturaStd-MediumOblique.otf') format('opentype')
+	src: url('./font/FuturaFont/FuturaStd-LightOblique.svg#bingo') format('svg')
+	src: url('./font/FuturaFont/FuturaStd-LightOblique.otf') format('opentype')
 @font-face
 	font-family: "FuturaStd Light"
 	src: url('./font/FuturaFont/FuturaStd-Light.eot')
@@ -43,11 +43,12 @@ html, body
 	.header
 		float: left
 		width: 100%
-		height: 72px
+		height: 84px
 		box-sizing: border-box
-		padding: 16px 6px
+		padding: 24px 6px
 		border-bottom: 1px solid #90060a
 		.banner
+			margin-left: 12px
 			font-family: "FuturaStd Bold"
 			float: left
 			color: #90060a
@@ -131,7 +132,7 @@ html, body
 	.footer
 		float: left
 		width: 100%
-		height: 188px
+		height: 156px
 		border-top: 1px solid #90060a
 		border-bottom: 1px solid #90060a
 		overflow: hidden
@@ -193,7 +194,7 @@ html, body
 				display: inline
 				width: calc(100% - 50px)
 				color: #969696
-				font-family: "FuturaStd MediumOblique"
+				font-family: "FuturaStd LightOblique"
 				font-size: 20px
 			.quote-author
 				float: left
@@ -201,7 +202,7 @@ html, body
 				text-align: right
 				width: 100%
 				color: #969696
-				font-family: "FuturaStd Medium"
+				font-family: "FuturaStd Light"
 				font-size: 20px
 .page-second
 	box-sizing: border-box
@@ -222,6 +223,12 @@ html, body
 		color: #969696
 	.color-white
 		color: #bebebe
+	.left-side
+		padding-left: 17%
+		padding-right: 13%
+	.right-side
+		padding-left: 13%
+		padding-right: 17%
 	.side
 		overflow: hidden
 		float: left
@@ -229,7 +236,6 @@ html, body
 		height: 60%
 		display: table
 		box-sizing: border-box
-		padding: 0px 15%
 		.img-second
 			width: 210px
 			height: 170px
@@ -328,6 +334,7 @@ html, body
 			color: #7a797a
 			background-size: contain
 			background-repeat: no-repeat
+			margin-top: 60px
 		.left
 			float: left
 		.right
@@ -349,26 +356,29 @@ html, body
 			top: 530px
 			background-image: url(../img/puce3.png)
 		.left-one
-			top: 100px
-			left: 40px
+			width: 30%
 		.right-two
-			left: 10px
+			width: 30%
 		.left-three
-			left: 40px
+			width: 30%
 		.right-one
+			margin-top: 20px
+			width: 300px
 			background-image: url(../img/rouge.png)
 		.left-two
-			left: 30px
+			margin-top: 20px
+			width: 300px
 			background-image: url(../img/bleu.png)
 		.right-three
 			top: -50px
+			width: 300px
 			background-image: url(../img/vert.png)
 .page-fourth
 	height: 100%
 	float: left
 	padding-top: 100px
 	background-image: url(../img/bottom.jpg)
-	background-size: 100% auto
+	background-size: 100% 100%
 	background-repeat: no-repeat
 	.next-puce
 		margin-left: auto
